# adversarial_noise

./: .gitignore  Notes.txt  README.md  attack_image_from_file.py  existing_example.ipynb  general_implementation.ipynb  pyproject.toml  write_cat.py
dev/: write_cat.py
src/adversarial_noise/: __init__.py  evaluation.py  fgsm.py  utils.py
tests/: test_iterative_fast_gradient_sign_target.py
