[project]
name = "adversarial-noise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[project.scripts]
hello = "adversarial_noise:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
